--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -21,7 +21,7 @@
     <!-- maximum 140 char -->
     <meta name="twitter:description" content="Your site description, maximum 140 char "/>
     <!-- maximum 140 char -->
-    <meta name="twitter:image" content="assets/img/twittercardimg/twittercard-280-150.jpg"/>
+    <meta name="twitter:image" content="../assets/img/twittercardimg/twittercard-280-150.jpg"/>
     <!-- when you post this page url in twitter , this image will be shown -->
     <!-- twitter card ends from here -->
 
@@ -32,54 +32,54 @@
     <meta property="og:site_name" content="Your site name here"/>
     <!--meta property="fb:admins" content="" /-->  <!-- use this if you have  -->
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="assets/img/opengraph/fbphoto.jpg"/>
+    <meta property="og:image" content="../assets/img/opengraph/fbphoto.jpg"/>
     <!-- when you post this page url in facebook , this image will be shown -->
     <!-- facebook open graph ends from here -->
 
     <!--  FAVICON AND TOUCH ICONS -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="../assets/img/favicon.ico"/>
     <!-- this icon shows in browser toolbar -->
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico"/>
     <!-- this icon shows in browser toolbar -->
-    <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="assets/img/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="assets/img/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="assets/img/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="assets/img/favicon/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="../assets/img/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../assets/img/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../assets/img/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../assets/img/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../assets/img/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../assets/img/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../assets/img/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../assets/img/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../assets/img/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../assets/img/favicon/manifest.json">
 
     <!-- BOOTSTRAP CSS -->
-    <link rel="stylesheet" href="assets/libs/bootstrap/css/bootstrap.min.css" media="all"/>
+    <link rel="stylesheet" href="../assets/libs/bootstrap/css/bootstrap.min.css" media="all"/>
 
     <!-- FONT AWESOME -->
-    <link rel="stylesheet" href="assets/libs/fontawesome/css/font-awesome.min.css" media="all"/>
+    <link rel="stylesheet" href="../assets/libs/fontawesome/css/font-awesome.min.css" media="all"/>
 
     <!-- FONT AWESOME -->
-    <link rel="stylesheet" href="assets/libs/maginificpopup/magnific-popup.css" media="all"/>
+    <link rel="stylesheet" href="../assets/libs/maginificpopup/magnific-popup.css" media="all"/>
 
     <!-- Time Circle -->
-    <link rel="stylesheet" href="assets/libs/timer/TimeCircles.css" media="all"/>
+    <link rel="stylesheet" href="../assets/libs/timer/TimeCircles.css" media="all"/>
 
     <!-- OWL CAROUSEL CSS -->
-    <link rel="stylesheet" href="assets/libs/owlcarousel/owl.carousel.min.css" media="all" />
-    <link rel="stylesheet" href="assets/libs/owlcarousel/owl.theme.default.min.css" media="all" />
+    <link rel="stylesheet" href="../assets/libs/owlcarousel/owl.carousel.min.css" media="all" />
+    <link rel="stylesheet" href="../assets/libs/owlcarousel/owl.theme.default.min.css" media="all" />
 
     <!-- GOOGLE FONT -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oswald:400,700%7cRaleway:300,400,400i,500,600,700,900"/>
 
     <!-- MASTER  STYLESHEET  -->
-    <link id="lgx-master-style" rel="stylesheet" href="assets/css/style-default.min.css" media="all"/>
+    <link id="lgx-master-style" rel="stylesheet" href="../assets/css/style-default.min.css" media="all"/>
 
     <!-- MODERNIZER CSS  -->
-    <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="../assets/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 
 <body class="home">
@@ -108,7 +108,7 @@
                         </button>
                         <div class="lgx-logo">
                             <a href="index.html" class="lgx-scroll">
-                                <img src="assets/img/logo.png" alt="Eventhunt Logo"/>
+                                <img src="../assets/img/logo.png" alt="Eventhunt Logo"/>
                             </a>
                         </div>
                     </div>
@@ -374,7 +374,7 @@
             <div class="container">
                 <div class="lgx-footer-area">
                     <div class="lgx-footer-single">
-                        <a class="logo" href="index.html"><img src="assets/img/footer-logo.png" alt="Logo"></a>
+                        <a class="logo" href="index.html"><img src="../assets/img/footer-logo.png" alt="Logo"></a>
                     </div> <!--//footer-area-->
                     <div class="lgx-footer-single">
                         <h3 class="footer-title">Venue Location </h3>
@@ -440,53 +440,53 @@
 <!--//.LGX SITE CONTAINER-->
 <!-- *** ADD YOUR SITE SCRIPT HERE *** -->
 <!-- JQUERY  -->
-<script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
+<script src="../assets/js/vendor/jquery-1.12.4.min.js"></script>
 
 <!-- BOOTSTRAP JS  -->
-<script src="assets/libs/bootstrap/js/bootstrap.min.js"></script>
+<script src="../assets/libs/bootstrap/js/bootstrap.min.js"></script>
 
 <!-- Smooth Scroll  -->
-<script src="assets/libs/jquery.smooth-scroll.js"></script>
+<script src="../assets/libs/jquery.smooth-scroll.js"></script>
 
 <!-- SKILLS SCRIPT  -->
-<script src="assets/libs/jquery.validate.js"></script>
+<script src="../assets/libs/jquery.validate.js"></script>
 
 <!-- if load google maps then load this api, change api key as it may expire for limit cross as this is provided with any theme -->
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQvRGGtL6OrpP5xVMxq_0NgiMiRhm3ycI"></script>
 
 <!-- CUSTOM GOOGLE MAP -->
-<script type="text/javascript" src="assets/libs/gmap/jquery.googlemap.js"></script>
+<script type="text/javascript" src="../assets/libs/gmap/jquery.googlemap.js"></script>
 
 <!-- adding magnific popup js library -->
-<script type="text/javascript" src="assets/libs/maginificpopup/jquery.magnific-popup.min.js"></script>
+<script type="text/javascript" src="../assets/libs/maginificpopup/jquery.magnific-popup.min.js"></script>
 
 <!-- Owl Carousel  -->
-<script src="assets/libs/owlcarousel/owl.carousel.min.js"></script>
+<script src="../assets/libs/owlcarousel/owl.carousel.min.js"></script>
 
 <!-- COUNTDOWN   -->
-<script src="assets/libs/countdown.js"></script>
-<script src="assets/libs/timer/TimeCircles.js"></script>
+<script src="../assets/libs/countdown.js"></script>
+<script src="../assets/libs/timer/TimeCircles.js"></script>
 
 <!-- Counter JS -->
-<script src="assets/libs/waypoints.min.js"></script>
-<script src="assets/libs/counterup/jquery.counterup.min.js"></script>
+<script src="../assets/libs/waypoints.min.js"></script>
+<script src="../assets/libs/counterup/jquery.counterup.min.js"></script>
 
 <!-- SMOTH SCROLL -->
-<script src="assets/libs/jquery.smooth-scroll.min.js"></script>
-<script src="assets/libs/jquery.easing.min.js"></script>
+<script src="../assets/libs/jquery.smooth-scroll.min.js"></script>
+<script src="../assets/libs/jquery.easing.min.js"></script>
 
 <!-- type js -->
-<script src="assets/libs/typed/typed.min.js"></script>
+<script src="../assets/libs/typed/typed.min.js"></script>
 
 <!-- header parallax js -->
-<script src="assets/libs/header-parallax.js"></script>
+<script src="../assets/libs/header-parallax.js"></script>
 
 <!-- instafeed js -->
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/instafeed.js/1.4.1/instafeed.min.js"></script>-->
-<script src="assets/libs/instafeed.min.js"></script>
+<script src="../assets/libs/instafeed.min.js"></script>
 
 <!-- CUSTOM SCRIPT  -->
-<script src="assets/js/custom.script.js"></script>
+<script src="../assets/js/custom.script.js"></script>
 
 
 
