--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                         <div class="col-md-offset-5 col-sm-12 col-md-7">
                             <div class="lgx-about-content-area">
                                 <div class="lgx-heading">
-                                    <h2 class="heading">Happy New Year 2019</h2>
-                                    <h3 class="subheading">Why Happy New Year 2019 ?</h3>
+                                    <h2 class="heading">ARPCon 2020</h2>
+                                    <h3 class="subheading">What is ARPCon 2020?</h3>
                                 </div>
                                 <div class="lgx-about-content">
                                     <p class="text">
@@ -212,7 +212,7 @@
                                     </p>
                                     <div class="section-btn-area">
                                         <a class="lgx-btn" href="about.html">More About</a>
-                                        <a class="lgx-btn lgx-btn-red lgx-scroll" href="#lgx-registration">Buy Ticket</a>
+                                        <a class="lgx-btn lgx-btn-red lgx-scroll" href="#lgx-registration">Register</a>
                                     </div>
                                 </div>
                             </div>
@@ -234,7 +234,7 @@
                     <div class="col-xs-12">
                         <div class="lgx-heading">
                             <h2 class="heading">Who’s Speaking</h2>
-                            <h3 class="subheading">Welcome to the dedicated to building remarkable Speakers!</h3>
+                            <h3 class="subheading">Welcome the remarkable Speakers!</h3>
                         </div>
                     </div>
                 </div>
@@ -252,8 +252,8 @@
                                         <a class="sp-in" href="#"><i class="fa fa-linkedin"></i></a>
                                     </div>
                                     <div class="speaker-info">
-                                        <h3 class="title"><a href="speaker.html">Jonathon Doe</a></h3>
-                                        <h4 class="subtitle">Ceo of LogicHunt</h4>
+                                        <h3 class="title"><a href="speaker.html">Rakshit Tandon</a></h3>
+                                        <h4 class="subtitle">Cyber Crime Investigator</h4>
                                     </div>
                                 </figcaption>
                             </figure>
@@ -271,8 +271,8 @@
                                         <a class="sp-in" href="#"><i class="fa fa-linkedin"></i></a>
                                     </div>
                                     <div class="speaker-info">
-                                        <h3 class="title"><a href="speaker.html">Jonathon Doe</a></h3>
-                                        <h4 class="subtitle">Ceo of LogicHunt</h4>
+                                        <h3 class="title"><a href="speaker.html">That Faceless Coder</a></h3>
+                                        <h4 class="subtitle">Inveteck Global</h4>
                                     </div>
                                 </figcaption>
                             </figure>
@@ -822,65 +822,28 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12">
-                            <div class="lgx-registration-area lgx-registration-area2"> <!--lgx-registration-area2 lgx-registration-area3 "-->
-                                <div class="lgx-single-registration">
-                                    <div class="lgx-single-registration-inner">
-                                        <a class="icon" href="#"><img src="assets/img/icons/4.png" alt="ticket"/></a>
-                                        <div class="single-top">
-                                            <h3 class="title">Personal</h3>
-                                            <h4 class="price"><i>$</i>59</h4>
-                                        </div>
-                                        <div class="single-bottom">
-                                            <ul class="list-unstyled list">
-                                                <li>Regular Seating</li>
-                                                <li>Comfortable Seat</li>
-                                                <li>Coffee Break</li>
-                                                <li>One Workshop</li>
-                                                <li>Certificate</li>
-                                            </ul>
-                                            <a class="lgx-btn" href="#"><span>Buy Ticket</span></a>
-                                        </div>
+                            
+                            <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-4">
+                        <div class="lgx-single-speaker lgx-single-speaker-circle">
+                            <figure>
+                                <a class="profile-img" href="speakers.html"><img src="assets/img/ansh.png" alt="Speaker"/></a>
+                                <figcaption>
+                                    <div class="social-group">
+                                        <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
+                                        <a class="sp-fb" href="#"><i class="fa fa-facebook"></i></a>
+                                        <a class="sp-insta" href="#"><i class="fa fa-instagram"></i></a>
+                                        <a class="sp-in" href="#"><i class="fa fa-linkedin"></i></a>
                                     </div>
-                                </div>
-                                <div class="lgx-single-registration recommended">
-                                    <div class="lgx-single-registration-inner">
-                                        <a class="icon" href="#"><img src="assets/img/icons/3.png" alt="ticket"/></a>
-                                        <div class="single-top">
-                                            <h3 class="title">Business</h3>
-                                            <h4 class="price"><i>$</i>89</h4>
-                                        </div>
-                                        <div class="single-bottom">
-                                            <ul class="list-unstyled list">
-                                                <li>Regular Seating</li>
-                                                <li>Comfortable Seat</li>
-                                                <li>Coffee Break</li>
-                                                <li>One Workshop</li>
-                                                <li>Certificate</li>
-                                            </ul>
-                                            <a class="lgx-btn" href="#"><span>Buy Ticket</span></a>
-                                        </div>
+                                    <div class="speaker-info">
+                                        <h3 class="title"><a href="speaker.html">Ansh Bhawnani</a></h3>
+                                        <h4 class="subtitle">Information Security YouTuber</h4>
                                     </div>
-                                </div>
-                                <div class="lgx-single-registration">
-                                    <div class="lgx-single-registration-inner">
-                                        <a class="icon" href="#"><img src="assets/img/icons/2.png" alt="ticket"/></a>
-                                        <div class="single-top">
-                                            <h3 class="title">Premium</h3>
-                                            <h4 class="price"><i>$</i>99</h4>
-                                        </div>
-                                        <div class="single-bottom">
-                                            <ul class="list-unstyled list">
-                                                <li>Regular Seating</li>
-                                                <li>Comfortable Seat</li>
-                                                <li>Coffee Break</li>
-                                                <li>One Workshop</li>
-                                                <li>Certificate</li>
-                                            </ul>
-                                            <a class="lgx-btn" href="#"><span>Buy Ticket</span></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                                </figcaption>
+                            </figure>
+                        </div>
+                    </div>
+
                         </div>
                     </div>
                 </div><!-- //.CONTAINER -->
