--- a/index.html
+++ b/index.html
@@ -824,10 +824,16 @@
                         <div class="col-xs-12">
                             
                             <div class="row">
+
+                                <div class="lgx-heading lgx-heading-white">
+                                <h2 class="heading">Team Members</h2>
+                                <h3 class="subheading">The people making this event possible!</h3>
+                            </div>
+
                     <div class="col-xs-12 col-sm-6 col-md-4">
                         <div class="lgx-single-speaker lgx-single-speaker-circle">
                             <figure>
-                                <a class="profile-img" href="speakers.html"><img src="assets/img/ansh.png" alt="Speaker"/></a>
+                                <a class="profile-img" href="speakers.html"><img src="assets/img/ansh.jpg" alt="Speaker"/></a>
                                 <figcaption>
                                     <div class="social-group">
                                         <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
