--- a/index.html
+++ b/index.html
@@ -836,6 +836,27 @@
                                 <a class="profile-img" href="speakers.html"><img src="assets/img/ansh.jpg" alt="Speaker"/></a>
                                 <figcaption>
                                     <div class="social-group">
+                                        
+                                         <a class="sp-tw" href="https://twitter.com/impratikdabhi"><i class="fa fa-twitter"></i></a>
+                                
+                                        <a class="sp-insta" href="https://instagram.com/i.m.pratikdabhi"><i class="fa fa-instagram"></i></a>
+                                        <a class="sp-yt" href="https://youtube.com/impratikdabhi"><i class="fa fa-linkedin"></i></a>
+                                    </div>
+                                    <div class="speaker-info">
+                                        <h3 class="title"><a href="speaker.html">Pratik Dabhi</a></h3>
+                                        <h4 class="subtitle">Synack Red Team Member, Bugcrowd Top 200 Hunter</h4>
+                                    </div>
+                                </figcaption>
+                            </figure>
+                        </div>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-6 col-md-4">
+                        <div class="lgx-single-speaker lgx-single-speaker-circle">
+                            <figure>
+                                <a class="profile-img" href="speakers.html"><img src="assets/img/ansh.jpg" alt="Speaker"/></a>
+                                <figcaption>
+                                    <div class="social-group">
                                         <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
                                         <a class="sp-fb" href="#"><i class="fa fa-facebook"></i></a>
                                         <a class="sp-insta" href="#"><i class="fa fa-instagram"></i></a>
