--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
                                          <a class="sp-tw" href="https://twitter.com/impratikdabhi"><i class="fa fa-twitter"></i></a>
                                 
                                         <a class="sp-insta" href="https://instagram.com/i.m.pratikdabhi"><i class="fa fa-instagram"></i></a>
-                                        <a class="sp-yt" href="https://youtube.com/impratikdabhi"><i class="fa fa-linkedin"></i></a>
+                                        <a class="sp-yt" href="https://youtube.com/impratikdabhi"><i class="fa fa-youtube-play"></i></a>
                                     </div>
                                     <div class="speaker-info">
                                         <h3 class="title"><a href="speaker.html">Pratik Dabhi</a></h3>
