--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-4">
                         <div class="lgx-single-speaker lgx-single-speaker-circle">
                             <figure>
-                                <a class="profile-img" href="speakers.html"><img src="assets/img/pratik.jpg" alt="Speaker"/></a>
+                                <a class="profile-img" href="speakers.html"><img src="assets/img/eshan.jpg" alt="Speaker"/></a>
                                 <figcaption>
                                     <div class="social-group">
                                         
