--- a/index.html
+++ b/index.html
@@ -857,10 +857,10 @@
                                 <a class="profile-img" href="speakers.html"><img src="assets/img/ansh.jpg" alt="Speaker"/></a>
                                 <figcaption>
                                     <div class="social-group">
-                                        <a class="sp-tw" href="#"><i class="fa fa-twitter"></i></a>
-                                        <a class="sp-fb" href="#"><i class="fa fa-facebook"></i></a>
-                                        <a class="sp-insta" href="#"><i class="fa fa-instagram"></i></a>
-                                        <a class="sp-in" href="#"><i class="fa fa-linkedin"></i></a>
+                                        <a class="sp-tw" href="https://twitter.com/bhawnani_ansh"><i class="fa fa-twitter"></i></a>
+                                        
+                                        <a class="sp-insta" href="https://www.instagram.com/ansh.98/"><i class="fa fa-instagram"></i></a>
+                                        <a class="sp-yt" href="https://youtube.com/bittentech"><i class="fa fa-youtube-play"></i></a>
                                     </div>
                                     <div class="speaker-info">
                                         <h3 class="title"><a href="speaker.html">Ansh Bhawnani</a></h3>
