--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
                             <li><a class="lgx-scroll" href="#lgx-speakers">Speakers</a></li>
                             <li><a class="lgx-scroll" href="#lgx-schedule">Schedule</a></li>
                             <li><a class="lgx-scroll" href="#lgx-sponsors">Sponsors</a></li>
+                            <li><a class="lgx-scroll" href="#lgx-team">Team</a></li>
                             
                             <li><a class="lgx-scroll" href="contact.html">Contact</a></li>
                         </ul>
@@ -817,7 +818,7 @@
 
     <!--REGISTRATION-->
     <section>
-        <div id="lgx-registration" class="lgx-registration"> <!--lgx-registration2 lgx-registration3 lgx-registration4-->
+        <div id="lgx-team" class="lgx-registration"> <!--lgx-registration2 lgx-registration3 lgx-registration4-->
             <div class="lgx-inner">
                 <div class="container">
                     <div class="row">
