--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
                         <!--//col-->
                     </div>
                     <div class="section-btn-area sponsor-btn-area">
-                        <a class="lgx-btn" href="#">Become A Sponsor</a>
+                        <a class="lgx-btn" href="mailto:arpcon3@gmail.com">Become A Sponsor</a>
                     </div>
                 </div>
                 <!--//container-->
