--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head -->
 
     <!-- SITE TITLE -->
-    <title>Emeet</title>
+    <title>ARPCon 2020</title>
     <meta name="description" content="Responsive EventHunt HTML Template"/>
     <meta name="keywords" content="Bootstrap3, Event,  Conference, Meetup, Template, Responsive, HTML5"/>
     <meta name="author" content="themearth.com"/>
